--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,12 @@ textarea {
   color: white;
 }
 
+.saveBtn i {
+  display: flex;
+  align-items: center;
+  justify-content: center ;
+}
+
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
