--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,15 +63,13 @@ textarea {
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
-}
-
-.saveBtn i {
   display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: center ;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+  cursor: pointer;
 }
